# oli

./: .gitignore  .npmignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  README.md  build.ps1  build.rs  build.sh  package-lock.json  package.json  pyproject.toml  run.sh
.github/scripts/: update_benchmark_docs.sh  update_demo.sh
.github/workflows/: benchmark.yml  ci.yml  code_checks.yml  crate.yml  dependency_check.yml  docs.yml  homebrew.yml  npm.yml  publish.yml
app/: package-lock.json  tsconfig.json
app/src/: cli.ts
app/src/components/: App.tsx  ChatInterface.tsx  ShortcutsPanel.tsx  StatusDisplay.tsx  StatusPanel.tsx  ToolStatusIndicator.tsx  WelcomeBox.tsx
app/src/services/: backend.ts
app/src/styles/: gruvbox.ts
app/src/types/: index.ts
app/src/utils/: commandUtils.ts  messageUtils.ts
docs/src/: SUMMARY.md  api.md  benchmark.md  book.toml  intro.md
examples/: basic_usage.rs
scripts/: install.js
src/: app.rs  errors.rs  inference.rs  lib.rs  main.rs  models.rs  ui.rs
src/agent/: core.rs  executor.rs  mod.rs  tools.rs
src/apis/: anthropic.rs  api_client.rs  gemini.rs  mod.rs  ollama.rs  openai.rs
src/app/: agent.rs  commands.rs  core.rs  history.rs  logger.rs  memory.rs  memory_methods.rs  mod.rs  models.rs  permissions.rs  state.rs  utils.rs
src/communication/: rpc.rs
src/fs_tools/: code_parser.rs  file_ops.rs  mod.rs
src/prompts/: mod.rs
src/tools/: mod.rs
src/tools/code/: parser.rs
src/tools/fs/: diff.rs  file_ops.rs  mod.rs  search.rs
src/tools/lsp/: manager.rs  mod.rs  models.rs  protocol.rs  servers.rs
src/ui/: components.rs  draw.rs  events.rs  guards.rs  helpers.rs  messages.rs  mod.rs  styles.rs
tests/: api_client_enum_tests.rs  api_client_tests.rs  integration_tests.rs  lib.rs  mod.rs  unit_tests.rs
tests/agent/: mod.rs  test_core.rs  test_executor.rs  test_tools.rs
tests/apis/: mod.rs  test_anthropic.rs  test_api_client.rs  test_api_client_enum.rs  test_gemini.rs  test_ollama.rs  test_openai.rs
tests/app/: mod.rs  test_core.rs  test_history.rs  test_logger.rs  test_scroll.rs
tests/communication/: mod.rs  test_rpc.rs
tests/integration/: mod.rs  test_code_parser.rs  test_file_read_tool.rs
tests/prompts/: mod.rs  test_prompts.rs
tests/tools/: mod.rs
tests/tools/code/: test_parser.rs
tests/tools/fs/: mod.rs  test_file_ops.rs  test_search.rs
tests/tools/lsp/: test_manager.rs
ui/: eslint.config.js  package-lock.json  package.json  tsconfig.json
ui/src/: cli.ts
ui/src/components/: ActiveTaskPanel.tsx  AnimatedSpinner.tsx  App.tsx  ChatInterface.tsx  CommandPalette.tsx  HeaderBox.tsx  ModelSelector.tsx  StatusBar.tsx  TaskInterruptionHandler.tsx  TaskList.tsx  ToolStatusIndicator.tsx  ToolStatusPanel.tsx  WelcomeBox.tsx
ui/src/services/: backend.ts
ui/src/styles/: gruvbox.ts
ui/src/types/: index.ts
ui/src/utils/: commandHandlers.ts
