[package]
name = "oli-tui"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
description = "A simple, blazingly fast TUI assistant based on local AI models."
repository = "https://github.com/amrit110/oli"
documentation = "https://docs.rs/oli-cli"
readme = "README.md"
keywords = ["tui", "assistant", "smart"]

[lib]
name = "oli_tui"
path = "src/lib.rs"

[[bin]]
name = "oli"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.97"
async-trait = "0.1.78"
crossterm = { version = "0.28.1", features = ["serde", "event-stream"] }
dirs = "6.0.0"
dotenv = "0.15.0"
glob = "0.3.1"
ratatui = "0.29.0"
regex = "1.10.3"
reqwest = { version = "0.12.14", features = ["json", "blocking"] }
rand = "0.8.5"
tui-textarea = { version = "0.7.0", default-features = false, features = ["ratatui"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
walkdir = "2.4.0"
