[package]
name = "oli-tui"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
description = "A simple, blazingly fast TUI assistant based on local AI models."
repository = "https://github.com/amrit110/oli"
documentation = "https://docs.rs/oli-cli"
readme = "README.md"
keywords = ["tui", "assistant", "smart"]

[lib]
name = "oli_tui"
path = "src/lib.rs"

[[bin]]
name = "oli"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.97"
async-trait = "0.1.88"
crossterm = { version = "0.28.1", features = ["serde", "event-stream"] }
dirs = "6.0.0"
dotenv = "0.15.0"
glob = "0.3.2"
ratatui = "0.29.0"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["json", "blocking"] }
rand = "0.9.0"
uuid = { version = "1.16.0", features = ["v4"] }

# Fast code search utilities
grep = "0.3"
grep-regex = "0.1"
grep-searcher = "0.1"
ignore = "0.4"
walkdir = "2.5.0"

# Tree-sitter for AST parsing
tree-sitter = "0.25.3"
tree-sitter-loader = "0.25.3"
tree-sitter-rust = "0.23.2"
tree-sitter-javascript = "0.23.1"
tree-sitter-python = "0.23.6"
tree-sitter-c = "0.23.4"
tree-sitter-cpp = "0.23.4"
tree-sitter-go = "0.23.4"
tree-sitter-java = "0.23.5"

# Dynamic loading support
libloading = "0.8"
lazy_static = "1.5.0"
tui-textarea = { version = "0.7.0", default-features = false, features = ["ratatui"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
tempfile = "3.19.1" # For temporary files in tests
