[package]
name = "oli-server"
version = "0.1.3"
edition = "2021"
license = "Apache-2.0"
description = "A simple, blazingly fast AI coding assistant server"
repository = "https://github.com/amrit110/oli"
documentation = "https://docs.rs/oli-server"
readme = "README.md"
keywords = ["assistant", "ai", "server"]

[lib]
name = "oli_server"
path = "src/lib.rs"

[[bin]]
name = "oli-server"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
chrono = "0.4.37"
crossterm = { version = "0.29.0", features = ["event-stream"] }
dirs = "6.0.0"
dotenv = "0.15.0"
glob = "0.3.2"
ratatui = "0.29.0"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["json", "blocking"] }
rand = "0.9.0"
uuid = { version = "1.16.0", features = ["v4"] }

# Fast code search utilities
ignore = "0.4"
walkdir = "2.5.0"
rayon = "1.8.1"

# Tree-sitter for AST parsing
tree-sitter = "0.25.3"
tree-sitter-rust = "0.24.0"
tree-sitter-javascript = "0.23.1"
tree-sitter-python = "0.23.6"
tree-sitter-c = "0.23.4"
tree-sitter-cpp = "0.23.4"
tree-sitter-go = "0.23.4"
tree-sitter-java = "0.23.5"

lazy_static = "1.5.0"
tui-textarea = { version = "0.7.0", default-features = false, features = ["ratatui"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
thiserror = "2.0.12"
tempfile = "3.19.1" # For temporary files in tests
