[project]
name = "oli-dev-env"
version = "0.1.0"
description = "Development environment for oli"
readme = "README.md"
authors = [ {name = "Amrit Krishnan", email = "amritk@vectorinstitute.ai"}]
license = "Apache-2.0"
repository = "https://github.com/amrit110/oli"
requires-python = ">=3.12"
dependencies = [
    "pre-commit>=3.6.0",
    "uv>=0.1.28",
]
